--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,3 +22,6 @@ jobs:
       
     - name: Build
       run: go build -v ./...
+      
+    - name: Build WIN
+      run: GOOS=windows GOARCH=amd64 go build -v ./...
