--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,7 @@ jobs:
       run: GOOS=windows GOARCH=amd64 go build -v -o ./output/imgfeedtovideo.exe ./...
 
     - name: Collect builds
+      uses: actions/upload-artifact@v3
       with:
         name: output
         path: output
