--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Collect builds
       uses: actions/upload-artifact@v3
       with:
-        name: output
+        name: release
         path: output
       
