--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: release
-        path: output
+        path: output/*
       
